force-app/main/default/objects/Capability_Template_Item__c/Capability_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Capability Template Item</label>
    <pluralLabel>Capability Template Items</pluralLabel>
    <nameField>
        <label>Capability Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Individual capability item within a template category</description>
</CustomObject>