force-app/main/default/objects/Capability_Template_Item__c/fields/Capability_Template_Category__c.field-meta.xml
<CustomField>
    <fullName>Capability_Template_Category__c</fullName>
    <label>Template Category</label>
    <type>MasterDetail</type>
    <referenceTo>Capability_Template_Category__c</referenceTo>
    <relationshipLabel>Template Items</relationshipLabel>
    <relationshipName>Template_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>