force-app/main/default/objects/Capability_Template_Item__c/fields/Default_Phase__c.field-meta.xml
<CustomField>
    <fullName>Default_Phase__c</fullName>
    <label>Default Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>